k8s/migrate-job.yaml
apiVersion: v1
kind: Pod
metadata:
  name: migrate-job
  namespace: db
spec:
  restartPolicy: Never
  containers:
  - name: migrate
    image: simplebank:latest
    imagePullPolicy: Never
    command: ["/app/migrate"]
    args: ["-path", "/app/migration", "-database", "$(DB_SOURCE)", "-verbose", "up"]
