k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplebank-ingress
  namespace: db
spec:
  rules:
    - host: simplebank.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: simplebank-api
                port: 
                  number: 8080
